fix image alignment.

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,13 +44,11 @@ img {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-  padding-bottom: 5%;
-  padding-top: 10%;
 }
 
 button {
-  float: right;
   margin-top: 4%;
+  text-align: right;
 }
 
 .speech-bubble {
